--- a/src/app/document-types/document-types.less
+++ b/src/app/document-types/document-types.less
@@ -1,5 +1,6 @@
 @import '../../styles.less';
 @import '../shared/dynamic-form.less';
+@import '../shared/styles/page-headers.less';
 
 .preserve-whitespace {
   white-space: pre-line;
