--- a/src/app/reporting/reporting.less
+++ b/src/app/reporting/reporting.less
@@ -1,9 +1,10 @@
 @import '../../styles.less';
+@import '../shared/styles/page-headers.less';
 
 .reporting-page {
   max-width: none;
   margin: 0;
-  padding: 2rem 15px 0 15px; // Add top padding since no page header
+  padding: 2rem 15px 0 15px;
 
   .page-header {
     padding: 2rem;
